k8s/app-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-a
  labels:
    app: app-a
spec:
  type: ClusterIP
  selector:
    app: app-a
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-a
  labels:
    app: app-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-a
  template:
    metadata:
      labels:
        app: app-a
    spec:
      containers:
      - name: app-a
        image: app-a
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
          limits:
            cpu: 400m
            memory: 400Mi
