k8s/app-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-b
  labels:
    app: app-b
spec:
  type: ClusterIP
  selector:
    app: app-b
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-b
  labels:
    app: app-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-b
  template:
    metadata:
      labels:
        app: app-b
    spec:
      containers:
      - name: app-b
        image: app-b
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
          limits:
            cpu: 400m
            memory: 400Mi
